--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,4 +1,7 @@
-driver=com.mysql.jdbc.Driver
-url=jdbc:mysql://localhost:3306/shopdev?useUnicode=true&characterEncoding=utf-8
-username=root
-password=root
+jdbc.driver=com.mysql.jdbc.Driver
+jdbc.url=jdbc:mysql://localhost:3306/shopdev?useUnicode=true&characterEncoding=utf-8
+jdbc.username=root
+jdbc.password=79669838703970BA
+jdbc.initialSize=20
+jdbc.maxActive=200
+jdbc.minIdle=20
