--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -5,10 +5,10 @@
          version="3.0">
     <display-name>Archetype Created Web Application</display-name>
     <!-- Spring的配置文件 -->
-    <context-param>
+    <!--<context-param>
         <param-name>contextConfigLocation</param-name>
         <param-value>classpath:config/spring/spring-all.xml</param-value>
-    </context-param>
+    </context-param>-->
 
     <!-- 编码过滤器 -->
     <filter>
@@ -38,7 +38,7 @@
     </listener>
 
     <!-- Spring MVC servlet -->
-    <servlet>
+    <!--<servlet>
         <servlet-name>SpringMVC</servlet-name>
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
         <init-param>
@@ -47,7 +47,7 @@
         </init-param>
         <load-on-startup>1</load-on-startup>
         <async-supported>true</async-supported>
-    </servlet>
+    </servlet>-->
     <servlet>
         <description>This is the description of my J2EE component</description>
         <display-name>This is the display name of my J2EE component</display-name>
@@ -59,20 +59,20 @@
         <url-pattern>/servlet/LoginServlet</url-pattern>
     </servlet-mapping>
 
-    <servlet-mapping>
+    <!--<servlet-mapping>
         <servlet-name>SpringMVC</servlet-name>
-        <!-- 此处可以可以配置成*.do，对应struts的后缀习惯 -->
+        &lt;!&ndash; 此处可以可以配置成*.do，对应struts的后缀习惯 &ndash;&gt;
         <url-pattern>/</url-pattern>
-    </servlet-mapping>
+    </servlet-mapping>-->
     <welcome-file-list>
         <welcome-file>/index.html</welcome-file>
     </welcome-file-list>
 
-    <servlet-mapping>
+    <!--<servlet-mapping>
         <servlet-name>default</servlet-name>
         <url-pattern>*.html</url-pattern>
     </servlet-mapping>
-    <!--静态资源处理：.css .jpg .js等-->
+    &lt;!&ndash;静态资源处理：.css .jpg .js等&ndash;&gt;
     <servlet-mapping>
         <servlet-name>default</servlet-name>
         <url-pattern>*.css</url-pattern>
@@ -92,6 +92,6 @@
     <servlet-mapping>
         <servlet-name>default</servlet-name>
         <url-pattern>*.js</url-pattern>
-    </servlet-mapping>
+    </servlet-mapping>-->
 
 </web-app>  
